--- a/demo/package.json
+++ b/demo/package.json
@@ -23,29 +23,36 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.14",
+    "geist": "1.2.2",
     "js-yaml": "4.1.0",
     "lucide-react": "0.358.0",
     "next": "^14",
     "next-themes": "^0.3.0",
     "rc-modal-sheet": "0.2.0-alpha.2",
-    "rc-template": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-frontmatter": "5.0.0",
     "remark-mdx-frontmatter": "4.0.0",
     "sharp": "^0.33.2",
+    "shiki": "1.2.0",
+    "shiro-ui": "workspace:*",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.6",
     "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.0",
+    "@iconify-json/material-symbols": "1.1.74",
+    "@iconify-json/mingcute": "1.1.16",
+    "@iconify/tailwind": "0.1.4",
+    "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.10",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/parser": "^7.2.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "4.7.2",
     "eslint": "^8.44.0",
     "eslint-config-next": "14.1.3",
     "eslint-config-prettier": "^9.1.0",
@@ -55,6 +62,8 @@
     "prettier": "^3.2.5",
     "remark-gfm": "4.0.0",
     "remark-parse": "11.0.0",
+    "tailwind-scrollbar": "3.1.0",
+    "tailwind-variants": "0.2.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.4.2",
     "unified": "11.0.4",
