--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -12,9 +12,10 @@
     "noEmit": true,
     "incremental": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "ES2022",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
+    "target": "ES2022",
     "isolatedModules": true,
     "jsx": "preserve",
     "baseUrl": ".",
