--- a/package.json
+++ b/package.json
@@ -1,48 +1,34 @@
 {
-  "name": "rc-template",
+  "name": "shiro-ui",
   "version": "0.0.3",
   "description": "TODO",
   "author": "Innei",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/innei-template/rc-library-template"
+    "url": "https://github.com/innei/shiro-ui"
   },
   "type": "module",
-  "main": "./src/index.ts",
-  "exports": {
-    ".": {
-      "import": "./src/index.ts"
-    },
-    "./src/*": {
-      "import": "./src/*"
-    }
-  },
   "files": [
     "dist",
     "readme.md",
     "tsconfig.json",
     "src"
   ],
-  "publishConfig": {
-    "main": "dist/index.cjs",
-    "module": "dist/index.js",
-    "types": "dist/index.d.ts",
-    "exports": {
-      ".": {
-        "import": "./dist/index.js",
-        "require": "./dist/index.cjs"
-      },
-      "./helper": {
-        "import": "./dist/helper.js",
-        "require": "./dist/helper.cjs"
-      },
-      "./*": [
-        "./*",
-        "./*.d.ts"
-      ]
-    }
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./*": [
+      "./*",
+      "./*.d.ts"
+    ]
   },
+  "publishConfig": {},
   "typesVersions": {
     "*": {
       "*": [
@@ -73,7 +59,8 @@
     "prebuild": "rm -rf lib && rm -rf esm",
     "build": "vite build && tailwindcss -i src/tw.css -o dist/index.css",
     "prepare": "husky install",
-    "release": "bump"
+    "release": "bump",
+    "dev": "vite build --watch"
   },
   "devDependencies": {
     "@innei/bump-version": "1.5.10",
@@ -97,14 +84,21 @@
     "vite": "5.1.6",
     "vite-plugin-dts": "3.7.3",
     "vite-tsconfig-paths": "4.3.2",
-    "vitest": "1.4.0"
-  },
-  "peerDependencies": {
-    "clsx": "*",
-    "tailwind-merge": "^2"
+    "vitest": "1.4.0",
+    "@tailwindcss/container-queries": "0.1.1",
+    "@tailwindcss/typography": "0.5.10",
+    "@iconify-json/material-symbols": "1.1.74",
+    "@iconify-json/mingcute": "1.1.16",
+    "@iconify/tailwind": "0.1.4",
+    "tailwind-scrollbar": "3.1.0"
   },
   "dependencies": {
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "@floating-ui/react-dom": "2.0.8",
+    "daisyui": "4.7.2",
+    "dayjs": "1.11.10",
+    "framer-motion": "^11.0.8",
+    "tailwind-variants": "0.2.0"
   }
 }
