--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,15 @@
     "baseUrl": "./src",
     "rootDir": "./src",
     "outDir": "/tmp",
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "target": "ES2020",
     "lib": [
       "ESNext",
       "DOM",
       "DOM.Iterable"
     ],
-    "module": "ES2022",
-    "moduleResolution": "Bundler",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "strict": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
