--- a/package.json
+++ b/package.json
@@ -63,10 +63,15 @@
     "dev": "vite build --watch"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "1.1.74",
+    "@iconify-json/mingcute": "1.1.16",
+    "@iconify/tailwind": "0.1.4",
     "@innei/bump-version": "1.5.10",
     "@innei/eslint-config-react-ts": "0.12.4",
     "@innei/eslint-config-ts": "0.12.4",
     "@innei/prettier": "0.12.4",
+    "@tailwindcss/container-queries": "0.1.1",
+    "@tailwindcss/typography": "0.5.10",
     "@types/node": "20.11.28",
     "@types/react": "18.2.66",
     "@vitejs/plugin-react": "4.2.1",
@@ -78,27 +83,25 @@
     "prettier": "3.2.5",
     "react": "18.2.0",
     "rollup-plugin-preserve-directives": "0.4.0",
+    "tailwind-scrollbar": "3.1.0",
     "tailwindcss": "3.4.1",
     "tslib": "2.6.2",
     "typescript": "5.4.2",
     "vite": "5.1.6",
     "vite-plugin-dts": "3.7.3",
     "vite-tsconfig-paths": "4.3.2",
-    "vitest": "1.4.0",
-    "@tailwindcss/container-queries": "0.1.1",
-    "@tailwindcss/typography": "0.5.10",
-    "@iconify-json/material-symbols": "1.1.74",
-    "@iconify-json/mingcute": "1.1.16",
-    "@iconify/tailwind": "0.1.4",
-    "tailwind-scrollbar": "3.1.0"
+    "vitest": "1.4.0"
   },
   "dependencies": {
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
     "@floating-ui/react-dom": "2.0.8",
+    "@shikijs/transformers": "1.2.0",
+    "clsx": "^2.1.0",
     "daisyui": "4.7.2",
     "dayjs": "1.11.10",
     "framer-motion": "^11.0.8",
+    "jotai": "2.7.1",
+    "shiki": "1.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwind-variants": "0.2.0"
   }
 }
