--- a/demo/package.json
+++ b/demo/package.json
@@ -35,7 +35,7 @@
     "remark-mdx-frontmatter": "4.0.0",
     "sharp": "^0.33.2",
     "shiki": "1.2.0",
-    "shiro-ui": "workspace:*",
+    "shiro-rc": "workspace:*",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.6",
     "vaul": "^0.9.0"
