--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "shiro-ui",
+  "name": "shiro-rc",
   "version": "0.0.4",
   "description": "TODO",
   "author": "Innei",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/innei/shiro-ui"
+    "url": "https://github.com/innei/shiro-rc"
   },
   "type": "module",
   "files": [
