--- a/demo/package.json
+++ b/demo/package.json
@@ -48,6 +48,7 @@
     "@iconify/tailwind": "0.1.4",
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.10",
+    "@types/js-yaml": "4.0.9",
     "@types/node": "^20.11.28",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.6",
