--- a/demo/package.json
+++ b/demo/package.json
@@ -69,6 +69,7 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.4.2",
     "unified": "11.0.4",
-    "unist-util-visit": "5.0.0"
+    "unist-util-visit": "5.0.0",
+    "@innei/eslint-config-react-ts": "0.12.5"
   }
 }
