fix: next demo build
Signed-off-by: Innei <i@innei.in>

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "files": [
     "dist",
     "readme.md",
-    "tsconfig.json",
-    "src"
+    "tsconfig.json"
   ],
   "main": "dist/index.cjs",
   "module": "dist/index.js",
